Deleted old includes

--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
     <script type="text/javascript" src="js/importHTML.js"></script>
     <script type="text/javascript" src="css/fontawesome/js/all.js"></script>
     <script type="text/javascript" src="css/bootstrap/bootstrap-4.3.1-dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="codenext/calendar/lib/bootstrap-datepicker.js"></script>
 
     <!-- StyleSheet -->
     <link rel="stylesheet" href="css/bootstrap/bootstrap-4.3.1-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/fontawesome/css/all.css">
-    <link rel="stylesheet" type="text/css" href="codenext/calendar/lib/bootstrap-datepicker.css">
     <link rel="stylesheet" href="css/main.css">
 
 
@@ -225,8 +223,7 @@
    //     today = mm + '/' + dd + '/' + yyyy;
    //     document.write(today);
         currDate = yyyy + '-' + mm + '-' + dd;
-        $('#DateInput').val(currDate);
-
+        $('#inputDate').val(currDate);
     });
 
 
