--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             }
 
         .btn.btn-success {
-            width: 150px;
+            width: 160px;
         }
 
             .btn.btn-success.short {
@@ -125,13 +125,13 @@
     <div id="sidebar">
         <h3>Übersicht<i class="fa fa-times" style="margin-left: 50px;" onclick="$('#sidebar').toggleClass('visible')"></i></h3>
         <ul>
-            <li><a class="active" href="#">100</a></li>
-            <li><a href="#">101</a></li>
-            <li><a href="#">102</a></li>
-            <li><a href="#">103</a></li>
-            <li><a href="#">104</a></li>
-            <li><a href="#">105</a></li>
-            <li><a href="#">106</a></li>
+           
+            <li><a href="#">Auswertungen</a></li>
+            <li><a href="#">Verkauf</a></li>
+            <li><a href="#">Eike</a></li>
+            <li><a href="#">Gerd</a></li>
+            <li><a href="#">Bullmann</a></li>
+            <li><a href="#">Langes Wort zum Test</a></li>
 
 
         </ul>
